# platypos

./: .bashrc  .envrc  .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  Vagrantfile  debug-loader.lldb  init.gdb  justfile  platypos.toml  pos  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.cargo/: config  config.toml
apic/: Cargo.toml
apic/src/: ipi.rs  lib.rs  spurious_interrupt.rs  timer.rs  x2apic.rs  xapic.rs
boot_info/: Cargo.toml
boot_info/src/: lib.rs  memory_map.rs
common/: Cargo.toml
common/src/: sync.rs
config/: Cargo.toml  build.rs
config/src/: lib.rs
dbg/: Cargo.toml  README.md
dbg/src/: category.rs  lib.rs
debug-scripts/: loader.gdb
defmt/decoder/src/: frame.rs  lib.rs
docs/: hal.md  roadmap.md
docs/x86_64/: address_space.md
frame_allocator/: Cargo.toml
frame_allocator/src/: block_id.rs  lib.rs  order.rs  region.rs
gdb/: bootloader.py  init  kernel.py  xtask
hal/: Cargo.toml  README.md
hal-x86_64/: Cargo.toml
hal-x86_64/src/: interrupts.rs  lib.rs  topology.rs
hal-x86_64/src/interrupts/: apic.rs  handlers.rs
hal/src/: interrupts.rs  lib.rs  topology.rs
heap_allocator/: Cargo.toml
kernel/: Cargo.toml  Makefile.toml  build.rs  platypos.toml
kernel/.cargo/: config.toml
kernel/linker/: x86_64.ld
kernel/src/: alloc.rs  allocator.rs  arch.rs  console.rs  diagnostic.rs  driver.rs  error.rs  gdt.rs  interrupts.rs  lib.rs  logging.rs  main.rs  memory.rs  mm.rs  panic.rs  prelude.rs  qemu.rs  scheduler.rs  sync.rs  sys.rs  terminal.rs  test.rs  time.rs  timer.rs  trace.rs  util.rs
kernel/src/alloc/: early.rs
kernel/src/allocator/: early.rs  physical.rs
kernel/src/arch/: riscv.rs  x86_64.rs
kernel/src/arch/riscv/: address.rs  boot.S  kernel-orig.lds  kernel.lds  mod.rs  sync.rs
kernel/src/arch/x86_64/: display.rs  entry.rs  interrupts.rs  mm.rs  mod.rs  x86_64-kernel.json
kernel/src/driver/: uart.rs
kernel/src/interrupts/: apic.rs  handlers.rs  pic.rs
kernel/src/mem/: bitmap.rs  frame_allocator.rs  mod.rs
kernel/src/memory/: address_space.rs  alloc.rs  allocator.rs  frame.rs  old_page_table.rs  page.rs  page_frame.rs  page_table.rs
kernel/src/memory/page_table/: clone.rs
kernel/src/mm/: address.rs  heap_allocator.rs  map.rs  physical.rs  root_allocator.rs
kernel/src/scheduler/: context.rs  multiprocessor.rs
kernel/src/sys/: devicetree.rs  memory.rs
kernel/src/system/: apic.rs  gdt.rs  mod.rs  pic.rs
kernel/src/terminal/: screen.rs
kernel/src/time/: apic.rs  hpet.rs  pit.rs  tsc.rs
kernel/src/timer/: apic.rs  pit.rs  tsc.rs
kernel/src/topology/: acpi.rs  mod.rs  processor.rs
kernel/src/trace/: backtrace.rs  logger.rs
kernel/src/util/: core_local.rs  processor_local.rs  qemu.rs
kernel_core/: Cargo.toml
kernel_core/src/: lib.rs
kernel_core/src/allocators/: frame.rs
kernel_old/src/: mm.rs
kernel_x86_64/: Cargo.toml  x86_64-os.json
kernel_x86_64/boot_info/src/: lib.rs
kernel_x86_64/src/: framebuffer.rs  logger.rs  main.rs  mem.rs  platform.rs  util.rs
kernel_x86_64/src/platform/: frame_allocator.rs
kernel_x86_64/src/util/: qemu.rs
ktest/: Cargo.toml
ktest/macros/: Cargo.toml
ktest/macros/src/: lib.rs
ktest/src/: assertions.rs  lib.rs
ktrace/: Cargo.toml
ktrace/decoder/: Cargo.toml
ktrace/decoder/src/: fmt.rs  lib.rs
ktrace/proto/: Cargo.toml
ktrace/proto/src/: fields.rs  lib.rs
ktrace/src/: lib.rs  slab.rs  stack.rs
kutil/: Cargo.toml
kutil/src/: bitmap.rs  lib.rs
link/: eh_frame.ld  linkme_tests.ld  x86_64.ld
loader/: Cargo.toml
loader/src/: elf.rs  file.rs  handoff.rs  kernel_image.rs  load.rs  main.rs  memory_map.rs  page_table.rs  util.rs
loader_uefi/: Cargo.toml
loader_uefi/.cargo/: config.toml
old/: Cargo.toml
old/loader_uefi/: Makefile.toml
old/x86_64_ext/: Cargo.toml
pal/: Cargo.toml
pal/src/: lib.rs  mem.rs
platform/: Cargo.toml
platform/src/: lib.rs
platform_common/: Cargo.toml
platypos_boot_info/: Cargo.toml
platypos_boot_info/src/: lib.rs  memory_map.rs
platypos_config/: Cargo.toml  build.rs
platypos_config/src/: lib.rs
platypos_kernel/: Cargo.toml  x86_64-os.json  x86_64.ld  x86_64.stuff.ld
platypos_kernel/src/: lib.rs  main.rs  util.rs
platypos_kernel/src/allocators/: heap.rs  mod.rs  physical.rs
platypos_kernel/src/platform/shared/: addr.rs
platypos_kernel/src/platform/x86_64/: addr.rs  apic.rs  entry.rs  memory.rs  mod.rs
platypos_loader/: Cargo.toml
platypos_loader/src/: boot_manager.rs  filesystem.rs  loader.rs  main.rs  util.rs
platypos_loader/src/boot_manager/: exit_uefi.rs  handoff.rs  load_kernel.rs  map_uefi.rs  util.rs
platypos_loader/src/util/: allocator.rs  page_table.rs
platypos_pal/: Cargo.toml
platypos_pal/src/: addr.rs  lib.rs
platypos_platform_x86_64/: Cargo.toml
platypos_platform_x86_64/src/: lib.rs
platypos_runner/: Cargo.toml
platypos_runner/src/: cargo.rs  main.rs  ovmf.rs
platypos_test/: Cargo.toml
platypos_test/macro/: Cargo.toml
platypos_test/macro/src/: lib.rs
platypos_test/src/: lib.rs  qemu.rs
platypos_x86_64/: Cargo.toml  x86_64-os.json
platypos_x86_64/src/: main.rs
pos_cli/: Cargo.toml
pos_cli/src/: main.rs  qemu.rs
scripts/: launch.sh  pos  sync.sh
serial_logger/: Cargo.toml
serial_logger/src/: lib.rs
slab/: Cargo.toml
slab/src/: free_lists.rs  lib.rs  slot.rs  sync.rs
slog-serial/: Cargo.toml
slog-serial/src/: lib.rs
slog_kernel/: Cargo.toml  Makefile.toml
slog_kernel/src/: fuse_loop.rs  lib.rs  serial.rs  spinlock.rs
tmp/boot_info/: Cargo.toml
tmp/boot_info/src/: lib.rs
tmp/kernel/: Cargo.toml
tmp/loader/: Cargo.toml
tmp/old/kernel/: Cargo.toml
tmp/old/kernel/src/mem/: alloc.rs
tools/: Cargo.toml
tools/src/: build.rs  gdb.rs  main.rs  qemu.rs
x86_64_ext/: Cargo.toml
x86_64_ext/src/: instructions.rs  lib.rs  paging.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cargo.rs  command.rs  main.rs  output.rs  platform.rs  prelude.rs  run.rs  runner.rs  tools.rs
xtask/src/tools/: cargo.rs  gdb.rs  qemu.rs
xtask/src/tools/qemu/: decoder.rs  symbolizer.rs  x86_64.rs
(+42 files in other folders)
