[workspace]
members = [
	"kernel",
	"apic",
	"kutil",
	"serial_logger",

	"hal",
	"config",
	"kernel_core",
	"kernel_x86_64",

    "platypos_config",
	"platypos_pal",
	"platypos_kernel",
	"platypos_platform_x86_64",
	"platypos_x86_64",
	"platypos_test",
	"platypos_test/macro"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
