cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = ["kernel", "ktest", "ktest/macros", "xtask"]
exclude = ["defmt", "addr2line"]

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"
debug = true

# [profile.dev]
# # For backtraces
# rustflags = ["-Cforce-frame-pointers"]

# [profile.release]
# lto = "thin"
# debug = true
# split-debuginfo = "packed"
