cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "common",
    "hal",
    "hal-x86_64",
    "kernel",
    "ktest",
    "ktest/macros",
    "xtask",
    "ktrace",
    "ktrace/proto",
    "ktrace/decoder",
    "slab",
]
exclude = ["defmt", "addr2line", "linkme"]

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"
debug = true

# [profile.dev]
# # For backtraces
# rustflags = ["-Cforce-frame-pointers"]

# [profile.release]
# lto = "thin"
# debug = true
# split-debuginfo = "packed"
