[package]
name = "frame_allocator"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
description = "Architecture-independent page frame allocator using a buddy bitmap algorithm"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
intrusive-collections = { version = "0.7", default-features = false, features = ["nightly"] }
log = "0.4"
spin = "0.5"
