[package]
name = "platypos_kernel"
version = "0.1.0"
edition = "2021"
description = "Core PlatypOS kernel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1.2.0"
bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
embedded-graphics = "0.7.1"
itertools = { version = "0.10.3", default-features = false }
# defmt = { version = "0.3", features = ["encoding-raw"] }
defmt = { version = "0.3", path = "../defmt/defmt", features = [
    "encoding-raw",
] }
ktest = { path = "../ktest" }
linkme = "0.3"
mini-backtrace = "0.1"
spin = { version = "0.9.2", features = ["mutex", "once"] }
linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
static_assertions = "1.1.0"
intrusive-collections = "0.9.4"


[[bin]]
name = "platypos_kernel"
harness = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.10.12"
uart_16550 = "0.2.17"
x86_64 = "0.14.8"

[package.metadata.bootloader]
map-physical-memory = true
