[package]
name = "platypos_kernel"
version = "0.1.0"
edition = "2021"
description = "Core PlatypOS kernel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1.2.0"
bitvec = { version = "1.0.0", features = ["atomic"], default-features = false }
ciborium-io = "0.2"
embedded-graphics = "0.7.1"
itertools = { version = "0.10.3", default-features = false }
ktest = { path = "../ktest" }
mini-backtrace = "0.1"
platypos_common = { path = "../common" }
platypos_hal = { path = "../hal" }
platypos_ktrace = { path = "../ktrace" }
spin = { version = "0.9.2", features = ["mutex", "once"] }
sptr = "0.3"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
linked_list_allocator = { version = "0.10.0", features = ["alloc_ref"] }
static_assertions = "1.1.0"
intrusive-collections = "0.9.4"


[[bin]]
name = "platypos_kernel"
harness = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.10.12"
platypos_hal_x86_64 = { path = "../hal-x86_64" }
x86_64 = "0.14.8"

[package.metadata.bootloader]
map-physical-memory = true
