[package]
name = "kernel_core"
version = "0.1.0"
description = "Platform-independent core of PlatypOS"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { path = "../hal" }

bit_field = "0.10"
intrusive-collections = { version = "0.7", default-features = false, features = ["nightly"] }
log = "0.4"
spin = "0.5"