[package]
name = "platypos_kernel_x86_64"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

[dependencies]
ansi_rgb = "0.2"
platypos_kernel = { path = "../kernel" }
platypos_pal = { path = "../pal" }
rgb = "0.8"
rlibc = "1.0.0"
uart_16550 = "0.2"
x86_64 = "0.11"
x86_64_ext = { path = "../x86_64_ext" }

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.spinning_top]
version = "0.2"
features = ["nightly"]