[package]
name = "platypos_kernel_x86_64"
version = "0.1.0"
edition = "2021"
description = "PlatypOS kernel for the x86-64 platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.12"
embedded-graphics = "0.7.1"
log = { version = "0.4.16", features = [
    "kv_unstable",
    "kv_unstable_sval",
], default-features = false }
platypos_kernel = { path = "../kernel" }
platypos_platform = { path = "../platform" }
platypos_platform_common = { path = "../platform_common" }
spin = { version = "0.9.2", features = ["once"] }
uart_16550 = "0.2.17"
x86_64 = "0.14.8"
