[package]
name = "platypos_ktrace"
version = "0.1.0"
edition = "2021"
description = "Kernel tracing implementation for PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium-io = "0.2"
hash32 = "0.2.1"
heapless = "0.7"
platypos_common = { path = "../common" }
platypos_ktrace_proto = { path = "./proto" }
platypos_hal = { path = "../hal" }
postcard = "1.0"
tracing-core = { version = "0.1", default-features = false }
