[package]
name = "platypos_ktrace"
version = "0.1.0"
edition = "2021"
description = "Kernel tracing implementation for PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13", default-features = false, features = [
    "inline-more",
    "ahash",
] }
heapless = "0.7"
platypos_common = { path = "../common" }
platypos_ktrace_proto = { path = "./proto" }
platypos_hal = { path = "../hal" }
platypos_slab = { path = "../slab" }
postcard = "1.0"
serde = { version = "1.0", default-features = false }
thingbuf = { version = "0.1", default-features = false, features = ["static"] }
tracing-core = { version = "0.1", default-features = false }
