[package]
name = "platypos_loader_uefi"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

[dependencies]
goblin = { version = "0.2", default-features = false, features = ["elf64"] }
log = { version = "0.4", default-features = false }
plain = "0.2"
rlibc = "1.0"
uart_16550 = "0.2"
uefi = "0.5"
uefi-services = "0.2"
x86_64 = "0.11"
x86_64_ext = { path = "../x86_64_ext" }
