[package]
name = "platypos_platform_common"
version = "0.1.0"
edition = "2021"
description = "Platform type implementations usable across multiple platforms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platypos_platform = { path = "../platform" }
