[package]
name = "platypos_boot_info"
version = "0.1.0"
description = "Structures for information passed from the OS loader to the kernel"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.7"