[package]
name = "platypos_config"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
description = "Build-time configuration for PlatypOS"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
phf = { version = "0.7", features = ["core"] }

[build-dependencies]
toml = "0.5"
phf_codegen = "0.7"