[package]
name = "platypos_loader"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"
description = "UEFI bootloader for PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { version = "0.0.24", default-features = false, features = ["elf64"] }
log = "0.4"
plain = "0.2"
uefi = { git = "https://github.com/bnavetta/uefi-rs", branch = "master" }
uefi-services = { git = "https://github.com/bnavetta/uefi-rs", branch = "master" }
uefi-exts = { git = "https://github.com/bnavetta/uefi-rs", branch = "master" }
uart_16550 = "~0.2.0"
x86_64 = "0.7"

[features]
qemu = ["uefi-services/qemu"]