[package]
name = "platypos_platform_x86_64"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
description = "PAL implementation for x86-64"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platypos_pal = { path = "../platypos_pal" }
x86_64 = "0.7"