[package]
name = "platypos_runner"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
cargo_metadata = "0.8"
exitfailure = "0.5"
failure = "0.1"
paw = "1.0"
reqwest = "0.9"
structopt = { version = "0.2", features = ["paw"] }
tempdir = "0.3"
tmux_interface = "0.0.5"