[package]
name = "platypos_test"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
x86_64 = "0.7"
platypos_test_macro = { path = "./macro" }
