[package]
name = "platypos_test"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6"
log = "0.4"
x86_64 = "0.7"
platypos_config = { path = "../platypos_config" }
platypos_test_macro = { path = "./macro" }
serial_logger = { path = "../serial_logger" }
