[package]
name = "slog-serial"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

[dependencies]
uart_16550 = "~0.2.0"
spin = "~0.5"

[dependencies.slog]
# version = "~2.4.1"
# 2.4.1 doesn't actually work on no_std
git = "https://github.com/slog-rs/slog"
default-features = false
features = []
