[package]
name = "slog_kernel"
version = "0.0.1"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
description = "Slog drains for kernel logging"
edition = "2018"

[dependencies]
spinning_top = "0.2"
uart_16550 = "0.2"
x86_64 = "0.11"
x86_64_ext = { path = "../x86_64_ext" }

[dependencies.slog]
version = "2.5"
default-features = false