[package]
name = "tools"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tools for developing PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
cargo_metadata = "0.14.0"
miette = { version = "3.2.0", features = ["fancy"] }
owo-colors = "3.0.1"
tempfile = "3.2.0"
thiserror = "1.0.30"
