[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Tools for building PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-locator = "0.0.4"
camino = "1.0.7"
cargo_metadata = "0.15"
clap = { version = "3.0.13", features = ["derive"] }
color-eyre = "0.6.1"
enable-ansi-support = "0.1.2"
owo-colors = { version = "3.3.0", features = ["supports-colors"] }
supports-color = "1.3.0"
