[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Tools for building PlatypOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = { version = "0.17" }
bootloader-locator = "0.0.4"
camino = "1.0.7"
cargo_metadata = "0.15"
clap = { version = "3.0.13", features = ["derive", "env"] }
color-eyre = "0.6.1"
enable-ansi-support = "0.1.2"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
owo-colors = { version = "3.3.0", features = ["supports-colors"] }
platypos_ktrace_decoder = { path = "../ktrace/decoder" }
supports-color = "1.3.0"
duct = "0.13.5"
