[package]
name = "platypos_ktrace_decoder"
version = "0.1.0"
edition = "2021"
description = "Decoder for serialized KTrace messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
log = { version = "0.4", default-features = false }
memchr = "2.5.0"
owo-colors = { version = "3.3.0", features = ["supports-colors"] }
platypos_ktrace_proto = { path = "../proto", features = ["std"] }
postcard = "1.0"
serde = "1.0"
