[package]
name = "platypos_kernel"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive-collections = "0.9"
spinning_top = "0.2"
platypos_pal = { path = "../pal" }

[dependencies.log]
version = "0.4"
default-features = false
